Part 2 of fix for bug 187126.  This will update your database, which is necessary because it's a two-part fix.  First, it prevents multiple entries with the same UUID from being in the devices table in the database.  Second, it fixes code to actually find those entries.

I got a crash the first time I opened Amarok after this, but then I re-opened and it was fine.  Might be something crashy with the DatabaseUpdater when it actually does something, but dunno.

BUG: 187126

svn path=/trunk/extragear/multimedia/amarok/; revision=965828